@@ -1,3 +1,6 @@
+10 November 2008: Wouter
+	- fixup the getaddrinfo compat code rename.
+
 8 November 2008: Wouter
 	- added configure check for eee build warning.
 
